# elpis_manager

./: .gitignore  Makefile  README.md  compose-solo.yaml  compose.yaml  init.sql  manager_test.sh  openapi.yaml  proxy_test.sh  test.sh  test_send_data.sh  web_test.sh
.github/: labeler.yml
bravo/: config.toml  go.mod
estimation/: judgement_results.csv  pyproject.toml  scaler.joblib  trained_model.joblib
estimation/judgement/: positive.csv
estimation/model/: judgement_results.csv  pivot_columns.joblib  scaler.joblib  trained_model.joblib
estimation/negative_samples/: ble_data_172259.csv  wifi_data_172024.csv
estimation/positive_samples/: ble_data_170931.csv  ble_data_171137.csv  ble_data_171334.csv  ble_data_171349.csv  wifi_data_170713.csv  wifi_data_170754.csv  wifi_data_1731584800.csv
estimation/src/estimation/: app.py  main.py
solo_estimation/: pyproject.toml
solo_estimation/classifier/GraduateStudentsRoom/: ble_data_1732237711.csv  ble_data_1732237831.csv  ble_data_1732237872.csv
solo_estimation/classifier/UndergraduateStudentsRoom/: wifi_data_1732232318.csv  wifi_data_1732232583.csv  wifi_data_1732232679.csv
solo_estimation/judgement/: ble_data_1738154657.csv
solo_estimation/negative_samples/: ble_data_1732237412.csv  wifi_data_1732237319.csv  wifi_data_1732237452.csv  wifi_data_1732237492.csv
solo_estimation/positive_samples/: ble_data_1732232478.csv  ble_data_1732232583.csv  ble_data_1732232630.csv  ble_data_1732232679.csv  ble_data_1732232803.csv  wifi_data_1732232478.csv  wifi_data_1732232630.csv
solo_estimation/src/estimation/: app.py
solo_estimation/test/: ble_data_1732237789.csv
(+4292 files in other folders)
