[project]
name = "estimation"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hihumikan", email = "a@qqey.net" }
]
dependencies = [
    "fastapi>=0.115.4",
    "joblib>=1.4.2",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "python-multipart>=0.0.17",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "setuptools>=75.1.0",
    "uvicorn>=0.32.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/estimation"]

[project.scripts]
main = "estimation.main:main"
app = "estimation.app:app"
classification = "estimation.classification:main"
